src/root.scss
:root {
    --gradient: linear-gradient(15deg, #e79b28, #e25a5a);
    --gradient-reverse: linear-gradient(-15deg, #e25a5a, #e79b28);
    --text-dark: #1b1b1b;
    --text-light: white;
}

#root.noscroll {
    overflow: hidden;
}

* {
    font-family: "Roboto";
    margin: 0px;
    padding: 0px;
    color: var(--text-light);
}

a {
    color: var(--text-light);
    text-decoration: none;

    &:hover,
    &.active {
        text-decoration: underline;
    }
}

h1, h2, h3, h4, h5, h6 {
    font-family: "futura", "Nunito Sans";
}

h1 {
    font-size: 2em;
}

h2 {
    font-size: 1.6em;
}

h3 {
    font-size: 1.2em;
}

section {
    position: relative;
    display: block;

    min-height: 110vh;

    .content {
        width: 50vw;

        margin-left: auto;
        margin-right: auto;


        h2 {
            padding-top: 2em;
            margin-bottom: 2em;
        }
    }
}

@media only screen and (max-width: 1464px) {
    section .content {
        width: 60vw;
    }
} 

@media only screen and (max-width: 824px) {
    section .content {
        width: 90vw;
    }
}

